Updates to various texts on the site, as per Terri's email from 07/07/2015 18:15, with subject: Terrifying TeSS - Packages, Workflows, etc.

--- a/ckanext/tess/templates/group/snippets/helper.html
+++ b/ckanext/tess/templates/group/snippets/helper.html
@@ -6,8 +6,7 @@
   <div class="module-content">
     <p>
       {% trans %}
-        Packages are arbitrary collections of training materials that, for example, share a common purpose or
-        address your particular research topic.
+      Packages are essentially folders in which users may collect particular materials, from the full catalogue available within TeSS, to address their specific training needs.
       {% endtrans %}
     </p>
   </div>
