--- a/ckanext/tess/templates/home/about.html
+++ b/ckanext/tess/templates/home/about.html
@@ -20,7 +20,7 @@
                 TeSS is <a target="_blank" href="http://www.elixir-europe.org/">ELIXIR's</a>
                 Training e-Support System, developed by <a target="_blank" href="http://www.elixir-uk.org/">ELIXIR-UK</a>,
                 for disseminating, discovering and packaging training resources, primarily by aggregating information from
-                ELIXIR nodes, but also from various third party content providers.
+                ELIXIR nodes, but also from various 3rd-party content providers.
             </p>
             <p>
                 New technologies are generating huge amounts of life-science data, which scientists need to
@@ -29,24 +29,25 @@
             </p>
             <p>
                 ELIXIR-UK is responding to this challenge by coordinating European initiatives to training research
-                scientists in computing, statistics and bioinformatics. By plugging the skills gap we aim to strengthen
-                science across Europe, and will set the agenda for training needs in the future.
+                scientists in computing, statistics and bioinformatics. By plugging the skills gap,
+                ELIXIR-UK aims to strengthen life sciences across Europe and set the agenda for future training needs.
             </p>
         <a name="contact"></a>
+
         <h2>Contact us</h2>
-        <p>If you have any queries about TeSS, please email <a href="mailto:tess@elixir-uk.info">tess@elixir-uk.info</a>.
-        </p><p>
-        You can also email directly one of the following people (in alphabetical order):</p>
+        <p>
+            If you have any queries about TeSS, please email <a href="mailto:tess@elixir-uk.info">tess@elixir-uk.info</a>, or send a message to.
+        </p>
         <ul>
             <li><a href="mailto:teresa.k.attwood@manchester.ac.uk">Teresa (Terri) Atwood</a> (ELIXIR-UK/TeSS
-                co-investigator @Manchester)
+                co-investigator, University of Manchester)
             </li>
-            <li><a href="mailto:niall.beard@manchester.ac.uk">Niall Beard</a> (ELIXIR-UK/TeSS developer @Manchester)
+            <li><a href="mailto:niall.beard@manchester.ac.uk">Niall Beard</a> (ELIXIR-UK/TeSS developer, University of Manchester)
             </li>
             <li><a href=mailto:a.nenadic@manchester.ac.uk">Aleksandra Nenadic</a> (ELIXIR-UK training coordinator for
-                infrastructure technology and TeSS @Manchester)
+                infrastructure technology and TeSS, University of Manchester)
             </li>
-            <li><a href="mailto:milo.thurston@oerc.ox.ac.uk">Milo Thurston</a> (ELIXIR-UK/TeSS developer @Oxford)</li>
+            <li><a href="mailto:milo.thurston@oerc.ox.ac.uk">Milo Thurston</a> (ELIXIR-UK/TeSS developer, University of Oxford)</li>
         </ul>
         <a name="faq"> </a>
         <h2>FAQ</h2>
@@ -64,7 +65,7 @@
                     <div class="panel-body">
                         <p>
                             No. TeSS is an aggregator of ELIXIR-relevant training information and resources, harvested
-                            from individual ELIXIR nodes and from third party content providers.  
+                            from individual ELIXIR nodes and from 3rd-party content providers.  
                         </p>
                         <p>
                             TeSS does not store
@@ -86,7 +87,7 @@
                 <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                     <div class="panel-body">
                         <p>
-                        TeSS harvests training information from ELIXIR nodes and from third-party content providers,
+                        TeSS harvests training information from ELIXIR nodes and from 3rd-party content providers,
                         and aggregates that information according to different ‘views’ (e.g., ELIXIR overview versus node-specific) -
                         it does not store the training materials themselves (it is not a repository).
                         </p>
@@ -114,7 +115,7 @@
                         </p>
                         <p>
                             Training-relevant information is brought into TeSS automatically using the APIs of its content providers
-                            (or, where APIs do not exist, by scraping information automatically from providers’ Web sites).  
+                            (or, where APIs do not exist, by scraping information automatically from providers’ websites).  
                         </p>
                         <p>
                             If you wish your content to be added to TeSS, please contact the TeSS team so that we can arrange to harvest
@@ -137,7 +138,7 @@
                         <p>
                              Registered users can add a content providers from the <a href="/organization">content
                             providers page</a> page, by clicking the 'Add content provider' button. In the form provided,
-                            write a short description, upload the provider's logo, and provide a link to their Web site.
+                            write a short description, upload the provider's logo, and provide a link to their website.
                             Typically, this task will be performed by an admin rather than a regular user.    
                         <p>
                     </div>
@@ -156,7 +157,7 @@
                     <div class="panel-body">
                         <p>
                             You cannot upload training materials directly to TeSS (to do this, we encourage you to use
-                            third-party repositories, such as GOBLET).
+                            3rd-party repositories, such as GOBLET).
                         </p>
                         <p>
                             Registered users of TeSS can, however, add links
@@ -227,7 +228,7 @@
                     <p>
                         In TeSS, training workflows are essentially navigational tools that guide users, step-by-step,
                         through specific types of data analysis (e.g., protein sequence analysis, protein structure analysis,
-                        homology modelling, MS-based metabolomic analysis…), highlighting relevant tutorials, lessons,
+                        homology modelling, MS-based metabolomic analysis …), highlighting relevant tutorials, lessons,
                         software tools, databases, and so on, relevant to each step of the analysis pipeline.
                         From the available resources, users may select those of particular interest and assemble them into
                         their own customised training packages.
