--- a/ckanext/tess/templates/home/snippets/training_materials_button.html
+++ b/ckanext/tess/templates/home/snippets/training_materials_button.html
@@ -3,7 +3,7 @@
         <a href="/dataset"><span class="homepage-button"></span></a>
         <h3 class="heading">{{ _("Materials") }}</h3>
         <div>
-            Browse the catalogue of materials offered by ELIXIR nodes and 3<sup>rd</sup> party providers.
+            Browse the catalogue of materials offered by ELIXIR nodes and 3rd-party providers.
         </div>
     </div>
 </div>
