--- a/ckanext/tess/templates/home/snippets/welcome.html
+++ b/ckanext/tess/templates/home/snippets/welcome.html
@@ -9,7 +9,7 @@
       <p>
         {% trans %}
           <a href="http://elixir-europe.org">ELIXIR's</a> TeSS (Training eSupport System) is a portal for disseminating, discovering
-          and packaging training resources, aggregating information from <a href="/node">ELIXIR nodes</a> and 3<sup>rd</sup> party providers.
+          and packaging training resources, aggregating information from <a href="/node">ELIXIR nodes</a> and 3rd-party providers.
         {% endtrans %}
       </p>
       <p>
