--- a/ckanext/tess/templates/organization/snippets/help.html
+++ b/ckanext/tess/templates/organization/snippets/help.html
@@ -6,10 +6,8 @@
   <div class="module-content">
     {% trans %}
       <p>
-	Content providers are organizations (real or virtual) that provide
-      	or link to training materials. TeSS is fed by content from training
-	portals, such as GOBLET, ELIXIR nodes' own training material, 
-	foundation organisations, such as Software and Data Carpentry, etc. 
+        Content providers are entities – e.g. institutions members of ELIXIR nodes, independent institutions or related portals, like GOBLET, the Software and Data Carpentry Foundations, etc.
+        – that provide training materials of relevance to ELIXIR.
      </p>
     {% endtrans %}
   </div>
