--- a/ckanext/tess/templates/package/search.html
+++ b/ckanext/tess/templates/package/search.html
@@ -18,12 +18,12 @@
         <p>
             {% trans %}
             <p>
-            In the context of TeSS, materials are links to online training resources (presentations, videos, exercises, etc.) made available
-            by 3<sup>rd</sup> party content providers. TeSS harvests materials automatically, including descriptions and other relevant meta-data
+            In the context of TeSS, materials are <em><b>links</b></em> to online training resources (presentations, videos, exercises, etc.) made available
+            by 3rd-party content providers. TeSS harvests materials automatically, including descriptions and other relevant meta-data
             (ontological categorisations, keywords, etc.).
             </p>
             <p>
-                Materials can also be registered manually. If your Web site contains training materials that you wish to
+                Materials can also be registered manually. If your website contains training materials that you wish to
                 include in TeSS, please contact the TeSS team (<a href="mailto:tess@elixir-uk.info">tess@elixir-uk.info </a>) for further details.
             </p>
             {% endtrans %}
