--- a/ckanext/tess/templates/workflow/snippets/helper.html
+++ b/ckanext/tess/templates/workflow/snippets/helper.html
@@ -5,14 +5,11 @@
     </h2>
     <div class="module-content">
         <p>
-            Training workflow is a visual representation of a collection of training materials that can help
-            navigating through the available resources specific to your research and training needs.
-
+            Training workflows are visual, step-by-step protocols that allow users to navigate materials in TeSS in topic- or task-related ways.
         </p>
         <p>
-            For example, you can use workflows to represent a step-by-step breakdown of typical stages of some kind of
-            data analysis (e.g., a protein sequence analysis pipeline, structure analysis protocol, etc.), where each node
-            in the workflow represents an analysis step and links to the relevant training resources.
+            For example, they may encapsulate typical stages of particular kinds of data analysis (protein sequence analysis, structure analysis, etc.), where each stage/node in the workflow
+            represents a given analysis step and links to the corresponding training resources.
         </p>
     </div>
 </div>
