--- a/ckanext/tess/templates/home/snippets/events_button.html
+++ b/ckanext/tess/templates/home/snippets/events_button.html
@@ -3,7 +3,7 @@
         <a href="/events"><span class="homepage-button"></span></a>
         <h3 class="heading">{{ _("Events") }}</h3>
         <div>
-            Discover the latest training events and news from ELIXIR nodes and 3<sup>rd</sup> party providers.
+            Discover the latest training events and news from ELIXIR nodes and 3rd-party providers.
         </div>
     </div>
 </div>
