--- a/ckanext/tess/templates/node/snippets/helper.html
+++ b/ckanext/tess/templates/node/snippets/helper.html
@@ -5,18 +5,9 @@
     </h2>
     <div class="module-content">
         <p>
-            ELIXIR is a pan-European research infrastructure.
-            It consists of <a href="/node/custom/hub.html">the Hub</a>, and a number of ELIXIR nodes.
-        </p>
+            ELIXIR is a pan-European research infrastructure consisting of <a href="/node/custom/hub.html">the Hub</a> and a number of, primarily, national nodes that provide services to their local communities.
         <p>
-            Select a node to find out more about the training materials, events, news, staff, and institutions
-            associated with it.</p>
-        {% if h.check_access('group_create') %}
-            <p>
-                You can add a new node here if your country has signed the declaration to join ELIXIR.
-            </p>
-        {% endif %}
-
+            Select a node to find out more about its events, training provision, staff and member institutions.
         </p>
     </div>
     <hr style="margin: 0px;">
