--- a/ckanext/tess/templates/organization/snippets/helper.html
+++ b/ckanext/tess/templates/organization/snippets/helper.html
@@ -6,13 +6,8 @@
   <div class="module-content">
     {% trans %}
       <p>
-        Content providers are organizations (real or virtual) that provide
-        training materials.
-     </p>
-      <p>
-           TeSS is aggregating content from training
-        portals, such as GOBLET, ELIXIR nodes,
-        foundation organisations, such as the Software and Data Carpentry, etc.
+        Content providers are entities – e.g. institutions members of ELIXIR nodes, independent institutions or related portals, like GOBLET, the Software and Data Carpentry Foundations, etc.
+        – that provide training materials of relevance to ELIXIR.
       </p>
     {% endtrans %}
   </div>
