Fixed typo in FAQ.

--- a/ckanext/tess/templates/home/about.html
+++ b/ckanext/tess/templates/home/about.html
@@ -179,7 +179,7 @@
                     <h4 class="panel-title">
                         <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive"
                            aria-expanded="false" aria-controls="collapseFive">
-                                What it a training package?
+                                What is a training package?
                         </a>
                     </h4>
                 </div>
