Fixed broken link on homepage

--- a/ckanext/tess/templates/home/snippets/events_button.html
+++ b/ckanext/tess/templates/home/snippets/events_button.html
@@ -1,6 +1,6 @@
 <div class="module module-button module-narrow module-shallow box homepage-button-div">
     <div class="homepage-button-content">
-        <a href="/events"><span class="homepage-button"></span></a>
+        <a href="/event"><span class="homepage-button"></span></a>
         <h3 class="heading">{{ _("Events") }}</h3>
         <div>
             Discover the latest training events and news from ELIXIR nodes and 3rd-party providers.
