Fix for positioning css style for checkbox.

--- a/ckanext/tess/templates/workflow/snippets/export_options.html
+++ b/ckanext/tess/templates/workflow/snippets/export_options.html
@@ -21,7 +21,7 @@
       <div id="ro" class="" style="display:none"> <h3>Coming Soon</h3> <br> <p>
           <b>Research Objects</b> are a way to share academic literature. They provide a mechanism for <b>identification</b>,
           <b>aggregation</b> and <b>annotation</b> of online academic materials.</p>
-          <p>The TeSS team are working on providing a Research Object export of training workflows</p>
+          <p>The TeSS team are working on providing a Research Object export of training workflows (the so-called 'Training Objects').</p>
           <p>Find out more about Research Objects:</p>
           <ul>
               <li><a href="http://www.researchobject.org/overview/">Research Object Homesite - Overview page</a></li>
