Added more checks for admin of group

--- a/ckanext/tess/templates/group/snippets/group_item.html
+++ b/ckanext/tess/templates/group/snippets/group_item.html
@@ -43,8 +43,8 @@ Example:
     <input name="group_remove.{{ group.id }}" value="{{ _('Remove') }}" type="submit" class="btn btn-danger btn-small media-edit" title="{{ _('Remove training material from this package') }}"/>
     {% endif %}
 
-    {% if type == 'group' and group.get('owner') and group.owner.get('name') %}
-        <p><em> Created by {{ group.owner.name }}</em></p>
+    {% if type == 'group' and group.get('owner') and group.get('owner').get('name') %}
+        <p><em> Created by {{ group.get('owner').get('name') }}</em></p>
     {% endif %}
     {% endblock %}
 </li>
