--- a/ckanext/tess/templates/group/index.html
+++ b/ckanext/tess/templates/group/index.html
@@ -12,6 +12,9 @@
   {% if h.check_access('group_create') %}
     {% link_for _('Add package'), controller='group', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
   {% endif %}
+  {% if c.user %} 
+    {% link_for _('View My Packages'), controller='user', action='dashboard_groups', class_='btn btn-primary pull-right', icon='folder-open' %}
+  {% endif %}
 {% endblock %}
 
 {% block primary_content_inner %}
