--- a/ckanext/tess/templates/workflow/snippets/workflow-property-editor.html
+++ b/ckanext/tess/templates/workflow/snippets/workflow-property-editor.html
@@ -13,7 +13,8 @@
     {'value':'#9a9cff'},{'value':'#b99aff'},
     {'value':'#c2c2c2'},{'value':'#cabdbf'},
     {'value':'#cca6ac'},{'value':'#f691b2'},
-    {'value':'#cd74e6'},{'value':'#a47ae2'}
+    {'value':'#cd74e6'},{'value':'#a47ae2'},
+    {'value':'#FFFFFF'}
     ] %}
 
 <div class="module property-editor" id="workflow_element_info" >
@@ -32,7 +33,7 @@
             <div>
             {{ form.input('title', label=_('Name'), id='element-name', placeholder=_('Element name'), classes=['control-full margin-bottom-0']) }}
             {{ form.textarea('description', label=_('Description'), id='element-description', placeholder=_('Short description (max 5 sentences)'), classes=['control-full margin-bottom-0']) }}
-            {{ form.select('colorpicker-longlist', label=_('Colour'), id='colorpicker-longlist', options=colour_list, classes=['control-full']) }}
+            {{ form.select('colorpicker-longlist', label=_('Colour'), id='colorpicker-longlist', options=colour_list, classes=['control-full', 'colour-picker']) }}
             {#{ form.select('topic', label=_('Topic'), id='element-topic', options=[{'value':'Topic 1'},{'value':'Topic 2'},{'value':'Topic 3'}], selected='Topic 1', classes=['control-full']) }#}
             <button class="btn btn-default" id="associate-training-materials"><i class="icon-book"></i> Associate materials</button>
         </div>
