Added navigation at the footer of the modal to help people navigate between tools/materials associations

--- a/ckanext/tess/templates/workflow/ajax/read_training.html
+++ b/ckanext/tess/templates/workflow/ajax/read_training.html
@@ -45,6 +45,7 @@
      });*/
      /*   populateModal();*/
     $(function() {
+        $('#navigate').hide()
         $('.modal-workflow-title').text("Workflow stage: {{c.node.get('name')}}");
     });
 
