--- a/ckanext/tess/templates/workflow/ajax/edit_training.html
+++ b/ckanext/tess/templates/workflow/ajax/edit_training.html
@@ -60,15 +60,7 @@
 </script>
 
 
-<div>
-
-<div id="navigate" class="h4" style="position:fixed; float:right; right: 400px">
-    <a href="#training_materials_head">Add Materials</a>
-    <br>
-<a href="#tools_head">Add Tools</a>
-</div>
-
-
+<div id="top">
     <h3>Description</h3>
     <div class="modal-workflow-description empty">No description set</div>
     <h3><em class="modal-workflow-title"></em></h3>
@@ -97,8 +89,12 @@
     <tr id="row-{{tool.get('link')}}">
         <td style="width:20px;">
             <input style="position:static !important;" type="checkbox" data-name="{{ tool['name'] }}" data-id="{{ tool['link'] }}" id="{{ tool['link'] }}" value="0"/></td>
+
         <td><span id="">{{ tool['name'] }}</span></td>
+        <td>{{ tool['description'] }}</td>
     </tr>
 {% endfor %}
 </table>
+
+
 
