--- a/ckanext/tess/templates/workflow/snippets/display_workflow.html
+++ b/ckanext/tess/templates/workflow/snippets/display_workflow.html
@@ -17,10 +17,11 @@
 {% resource 'tess/simplecolorpicker.css' %}<!--<link rel="stylesheet" href="jquery.simplecolorpicker.css">-->
 {% resource 'tess/workflows-cytoscape-toolbar.js' %}
 
-<div id="cy" style="float: right; margin-right: 15px" class="cy col-md-6 col-md-offset-1"></div>
+<button class="btn pull-right" id="zoom_enabled" data-value="true">Disable Zoom</button>
+
+<i class="pull-right fa fa-search-plus"></i><div id="cy" style="float: right; margin-right: 15px" class="cy col-md-6 col-md-offset-1"></div>
 
 <div id="modal_container">
-
 </div>
 
 <input type='text' id="node-info" class="hidden"/>
