--- a/ckanext/tess/fantastic/tess.css
+++ b/ckanext/tess/fantastic/tess.css
@@ -718,3 +718,8 @@ div#workflow_element_info ul.items{
     background-color: #E7E7E7;
     padding: 5px;
 }
+
+.zoom_config {
+    padding-bottom: 50px;
+    padding-right: 50px;
+}
