--- a/ckanext/tess/templates/workflow/snippets/display_workflow.html
+++ b/ckanext/tess/templates/workflow/snippets/display_workflow.html
@@ -17,9 +17,12 @@
 {% resource 'tess/simplecolorpicker.css' %}<!--<link rel="stylesheet" href="jquery.simplecolorpicker.css">-->
 {% resource 'tess/workflows-cytoscape-toolbar.js' %}
 
-<button class="btn pull-right" id="zoom_enabled" data-value="true">Disable Zoom</button>
+<div class="zoom_config">
+<button class="btn pull-right" id="enable_zoom" style="display:none"><i class="pull-right fa fa-search-plus"></i>Enable Zoom</button>
+<button class="btn pull-right" id="disable_zoom" style="background-image:none"><i class="pull-right fa fa-search-plus"></i>Disable Zoom</button>
+</div>
 
-<i class="pull-right fa fa-search-plus"></i><div id="cy" style="float: right; margin-right: 15px" class="cy col-md-6 col-md-offset-1"></div>
+<div id="cy" style="float: right; margin-right: 15px" class="cy col-md-6 col-md-offset-1"></div>
 
 <div id="modal_container">
 </div>
