--- a/ckanext/tess/templates/workflow/snippets/display_workflow.html
+++ b/ckanext/tess/templates/workflow/snippets/display_workflow.html
@@ -17,10 +17,12 @@
 {% resource 'tess/simplecolorpicker.css' %}<!--<link rel="stylesheet" href="jquery.simplecolorpicker.css">-->
 {% resource 'tess/workflows-cytoscape-toolbar.js' %}
 
+{% if action=='show'%}
 <div class="zoom_config">
-<button class="btn pull-right" id="enable_zoom" style="display:none"><i class="pull-right fa fa-search-plus"></i>Enable Zoom</button>
-<button class="btn pull-right" id="disable_zoom" style="background-image:none"><i class="pull-right fa fa-search-plus"></i>Disable Zoom</button>
+<button class="btn pull-right" id="enable_zoom" style="display:none; margin: 0px 15px 5px 0px; width: 150px;"><i class="pull-left fa fa-search-plus"></i>Enable zoom</button>
+<button class="btn pull-right" id="disable_zoom" style="background-image:none; margin: 0px 15px 5px 0px; width: 150px;"><i class="pull-left fa fa-search-plus" style="opacity: 0.3;"></i>Disable zoom</button>
 </div>
+{% endif %}
 
 <div id="cy" style="float: right; margin-right: 15px" class="cy col-md-6 col-md-offset-1"></div>
 
