Updated licence info

--- a/ckanext/tess/templates/home/about.html
+++ b/ckanext/tess/templates/home/about.html
@@ -271,7 +271,7 @@
             <p>
             TeSS is populated either automatically, by scraping training information from content providers, or by
             adding links to training resources manually. Both the TeSS Portal and the scraping/aggregation scripts
-            are open source, and are released under the GPL license.
+            are open source, and are released under the BSD 3-clause license.
             The source code be found in <a href="https://github.com/ElixirUK">GitHub</a>.
             </p>
             <p>
